--- a/resources/views/inertia_layout.edge
+++ b/resources/views/inertia_layout.edge
@@ -8,7 +8,8 @@
   <title inertia>AdonisJS x Inertia x VueJS</title>
 
   <link rel="preconnect" href="https://fonts.bunny.net">
-  <link href="https://fonts.bunny.net/css?family=instrument-sans:400,400i,500,500i,600,600i,700,700i" rel="stylesheet" />
+  <link href="https://fonts.bunny.net/css?family=instrument-sans:400,400i,500,500i,600,600i,700,700i"
+    rel="stylesheet" />
 
   <style>
     :root {
@@ -65,7 +66,7 @@
   @stack('dumper')
 </head>
 
-<body class="min-h-screen w-screen font-sans">
+<body class="font-sans">
   @inertia()
 </body>
 
